# imara

./: .env-template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  query_gen_config.yaml  start_mlflow.py  what6.md
.dvc/: config  config.local-template
configs/: open_rag_eval_graphmert.yaml  open_rag_eval_linearrag.yaml  open_rag_eval_naiverag.yaml
data/: .gitignore
data/eval/: .gitignore
data/eval/linearrag/: .gitignore  TRECEvaluator-results.csv  open_rag_eval_linearrag.yaml  results.json
data/processed/: .gitignore
data/processed/extracted/: .gitignore
data/raw/: documents.dvc
data/raw/documents/: .gitignore  2206.01062v1.pdf.dvc  sample.pdf.dvc
demo/processed/chunks/: 2206.01062v1_chunk_0.txt
demo/processed/extracted/2401.01473v3/: 2401.01473v3.doctags  2401.01473v3.html  2401.01473v3.md
demo/processed/extracted/2401.02564v2/: 2401.02564v2.doctags  2401.02564v2.html  2401.02564v2.md
demo/processed/extracted/2401.03305v2/: 2401.03305v2.doctags  2401.03305v2.html  2401.03305v2.md
demo/processed/extracted/2401.03342v3/: 2401.03342v3.doctags  2401.03342v3.html  2401.03342v3.md
demo/processed/extracted/2401.03345v2/: 2401.03345v2.doctags  2401.03345v2.html  2401.03345v2.md
demo/processed/extracted/2401.03776v8/: 2401.03776v8.doctags  2401.03776v8.html  2401.03776v8.md
demo/processed/extracted/2401.05657v5/: 2401.05657v5.doctags  2401.05657v5.html  2401.05657v5.md
demo/processed/extracted/2401.05713v1/: 2401.05713v1.doctags  2401.05713v1.html  2401.05713v1.md
demo/processed/extracted/2401.06326v4/: 2401.06326v4.doctags  2401.06326v4.html  2401.06326v4.md
demo/processed/extracted/docling/: 2206.01062v1.json
demo/processed/extracted/html/: 2206.01062v1.html
docs/: Eval_data.csv  build_report.sh  docs.excalidraw
docs/0. Admin/: OST_Projekt_Bewertung_2025_Template.docx  OST_Projekt_Leitfacen_2025_mdport.md
docs/1. Projektantrag/: OST_ML_Projektantrag.docx  OST_ML_Projektantrag_Template.docx
docs/2. Zwischenstand/: ML4SE-Projekt.pptx
docs/9. Projektabschluss/: TBD Projekt.pptx  ~$TBD Projekt.pptx
docs/9. Projektabschluss/Dokumentation/: Prjojekt IMARA Dokumenation.md  Projekt IMARA Schlussbericht.html  Projekt IMARA Schlussbericht.md  Projekt IMARA Schlussbericht_tmp.html
docs/tex-conversion/: CONVERSION_SUMMARY.md  IMARA_IEEE_Conference.aux  IMARA_IEEE_Conference.out  IMARA_IEEE_Conference.tex  README_IEEE_CONVERSION.md
ollama/: README.md  docker-compose.yml
src/: main.py
src/app/: chunk.py  embed.py  embedder.py  eval_open_rag.py  extract.py  prep_pipeline.py
src/app/graphmert/: build_graphs.py  corpus.py  embeddings.py  inference.py  train_model.py
src/app/lean_rag/: evaluate_score.py
src/app/lean_rag/data/five/: all_entities.json  five.jsonl  five_chunk.json
src/app/lean_rag/data/five/chunk/: entity.jsonl  relation.jsonl
src/app/lean_rag/data/five/duplicates/: entity.jsonl  relation.jsonl
src/app/lean_rag/data/five/graph/: community.jsonl  generate_relations.jsonl
src/app/lean_rag/datasets/five/: 2003.08005v1.doctags.txt  2003.08005v1.html  2003.08005v1.md  2401.01473v3.html  2401.01473v3.md  2401.01973v2.html  2401.02564v2.md
src/app/lean_rag/tools/: utils.py
src/app/linear_rag/: chunk.py  index.py  load.py  retrieve.py
src/app/naiverag/: chunk.py  embed.py
src/app/utils/: device_helper.py  mlflow_helper.py  params.py
src/experiments/: my_embedder.py  test_mlflow.py
src/utils/: mlflow_utils.py  prep_pipeline.py
supabase/: .gitignore  README.md  config.toml
supabase/functions/embed/: deno.json  index.ts
supabase/functions/embed_ollama/: index.ts
supabase/migrations/: 20251123121917_remote_schema.sql  20251129085710_remote_schema.sql  20251129092603_activate_plugins.sql  20251129093138_create_util.sql  20251129093949_create_job_and_queue.sql  20251129094256_create_process_embedding.sql  20251129095754_create_chunk_table.sql  20251129100557_create_trigger.sql  20251129100921_clear_vector_on_delete.sql  20251130105632_add_ollama_to_document_chunk.sql  20251130110132_create_jop_and_queue_ollama.sql  20251130110623_create_trigger_ollama.sql  20251130110857_create_process_embedding_ollama.sql  20251228124139_create_lr_persistence.sql
supabase/seeds/general/: general.sql
tests/: test_demo.py
