[project]
name = "Imara"
version = "0.1.0"
description = "Beschreibung des Projekts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"dotenv>=0.9.9",
	"mlflow>=3.6.0",
	"scikit-learn>=1.3.0",
	"pandas>=2.0.0",
	"numpy>=1.24.0",
	"boto3>=1.40.69",
	"easyocr>=1.7.2",
	"docling-core>=2.54.0",
	"docling>=2.63.0",
	"dvc>=3.64.0",
]

[tool.mypy]
strict = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
	"mypy>=1.17.0",
	"pre-commit>=4.2.0",
	"psycopg2-binary>=2.9.11",
	"pytest>=8.4.1",
	"pytest-cov>=6.2.1",
	"ruff>=0.12.4",
]
