[project]
name = "Imara"
version = "0.1.0"
description = "Beschreibung des Projekts"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
	"dotenv>=0.9.9",
	"mlflow>=3.6.0",
	"scikit-learn>=1.3.0",
	"pandas>=2.0.0",
	# Numpy 2.x is currently not supported/tested in this project (or by some dependencies), so we intentionally restrict to <2.0.0 until compatibility is verified.
	"numpy>=1.24.0,<2.0.0",
	"aiobotocore>=2.11.0",
	"boto3>=1.40.69",
	"easyocr>=1.7.2",
	"docling-core>=2.54.0",
	"docling>=2.63.0",
	"dvc>=3.64.0",
	"dvc-s3>=3.2.2",
	"sentence-transformers>=5.2.0",
	"networkx>=3.6",
	"transformers>=4.57.3",
	"spacy>=3.7.0",
	"en-core-web-sm",
	"google-generativeai>=0.8.3",
	"openai>=1.62.2",
	"python-igraph>=1.0.0",
	"scispacy>=0.6.2",
	"en-core-sci-md",
]

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
mypy_path = "src/app"
namespace_packages = true
exclude = [
    "^tests/",
    "^build/",
    "^dist/",
    "^src/experiments/",
]

[[tool.mypy.overrides]]
module = [
    "dvc.*",
    "dvc.api",
    "docling.*",
    "docling_core.*",
    "psycopg2.*",
    "app.utils.*",
    "utils.*",
    "openai.*",
    "ollama.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.experiments.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
en-core-sci-md = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_md-0.5.4.tar.gz" }

[dependency-groups]
dev = [
	"mypy>=1.17.0",
	"pre-commit>=4.2.0",
	"psycopg2-binary>=2.9.11",
	"pytest>=8.4.1",
	"pytest-cov>=6.2.1",
	"ruff>=0.12.4",
]
